grammar.js
    structure: $ => semiList($.structure_item),

    structure_item: $ => choice(
      $.type_definition,
      $.struct_definition,
      $.enum_definition,
      $.value_definition,
      $.function_definition,
      $.test_definition,
      $.trait_definition,
      $.impl_definition,
    ),

    function_definition: $ => seq(
      optional($.pub),
      'fn',
      $.function_identifier,
      optional($.type_parameters),
      optional($.parameters),
      optional($.return_type),
      $.block_expression,
    ),

    expression: $ => choice(
      $.simple_expression,
      $.if_expression,
      $.loop_expression,
      $.match_expression,
      $.for_expression,
    ),

    simple_expression: $ => choice(
      $.atomic_expression,
      $.qualified_identifier,
      $.unary_expression,
      $.binary_expression,
      $.struct_expression,
      $.nonempty_block_expression,
      $.anonymous_lambda_expression,
      $.anonymous_matrix_lambda_expression,
      $.constructor_expression,
      $.apply_expression,
      $.array_access_expression,
      $.dot_apply_expression,
      $.access_expression,
      $.method_expression,
      $.unit_expression,
      $.tuple_expression,
      $.constraint_expression,
      $.array_expression,
      $.unwrap_expression,
      '_'
    ),

    atomic_expression: $ => choice(
      $.string_interpolation,
      $.literal
    ),

    literal: $ => choice(
      $.boolean_literal,
      $.float_literal,
      $.integer_literal,
      $.byte_literal,
      $.char_literal,
      $.string_literal,
      $.multiline_string_literal,
    ),

    integer_literal: _ => token(choice(
      /[0-9][0-9_]*L?/,
      /0[xX][0-9a-fA-F_]+L?/,
      /0[oO][0-7_]+L?/,
      /0[bB][01_]+L?/,
    )),

    // integerPart = /[0-9][_0-9]*/,
    // decimalPart = /[_0-9]+/,
    // exponentPart = /[eE][0-9][_0-9]*/,
    // float_literal: _ => /[0-9][_0-9]*\.[_0-9]*([eE][0-9][_0-9]*)?/,

    block_expression: $ => seq(
      '{',
      semiList($.statement_expression),
      '}',
    ),

    constructor_expression: $ => choice(
      $.uppercase_identifier,
      seq($.qualified_type_identifier, $.colon_colon, $.uppercase_identifier)
    ),

    apply_expression: $ => prec(PREC.apply, seq(
      field('method', $.simple_expression),
      '(',
      commaList(seq(optional(seq($.labeled_identifier, '=')), $.expression)),
      ')'
    )),

    statement_expression: $ => choice(
      $.let_expression,
      $.let_mut_expression,
      $.assign_expression,
      $.named_lambda_expression,
      $.named_matrix_expression,
      $.while_expression,
      seq('break', commaList($.expression)),
      seq('continue', commaList($.expression)),
      $.return_expression,
      $.expression
    ),

    uppercase_identifier: _ => /[\p{Uppercase_Letter}][_\p{XID_Continue}]*/,
    lowercase_identifier: _ => /[_[\p{XID_Start}--\p{Uppercase_Letter}]][_\p{XID_Continue}]*/v,
    identifier: $ => choice(
      $.uppercase_identifier,
      $.lowercase_identifier,
    ),

    dot_operator: _ => '.',

    // colon_colon: _ => '::',

    dot_identifier: $ => seq(
      $.dot_operator,
      $.inner_dot_identifier,
    ),
    inner_dot_identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    package_identifier: _ => /@[_\p{XID_Start}][_\p{XID_Continue}]*/,

    qualified_type_identifier: $ => choice(
      $.identifier,
      seq($.package_identifier, $.dot_identifier)
    ),

    function_identifier: $ => choice(
      $.lowercase_identifier,
      seq($.qualified_type_identifier, $.colon_colon, $.lowercase_identifier)
    ),
