test/corpus/constructor.txt
================================================================================
unqualified
================================================================================
fn init {
  Some
  Some(2)
}
--------------------------------------------------------------------------------

(structure
  (structure_item
    (function_definition
      (function_identifier
        (lowercase_identifier))
      (block_expression
        (statement_expression
          (expression
            (simple_expression
              (constructor_expression
                (uppercase_identifier)))))
        (statement_expression
          (expression
            (simple_expression
              (apply_expression
                (simple_expression
                  (constructor_expression
                    (uppercase_identifier)))
                (expression
                  (simple_expression
                    (atomic_expression
                      (literal
                        (integer_literal)))))))))))))

================================================================================
qualified
================================================================================
fn init {
  opt::Some
  Opt::Some
}
--------------------------------------------------------------------------------

(structure
  (structure_item
    (function_definition
      (function_identifier
        (lowercase_identifier))
      (block_expression
        (statement_expression
          (expression
            (simple_expression
              (constructor_expression
                (qualified_type_identifier
                  (identifier
                    (lowercase_identifier)))
                (colon_colon)
                (uppercase_identifier)))))
        (statement_expression
          (expression
            (simple_expression
              (constructor_expression
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier)))
                (colon_colon)
                (uppercase_identifier)))))))))

================================================================================
package-qualified
================================================================================
fn init {
  @pkg.opt::Some
  @pkg.Opt::Some
}
--------------------------------------------------------------------------------

(structure
  (structure_item
    (function_definition
      (function_identifier
        (lowercase_identifier))
      (block_expression
        (statement_expression
          (expression
            (simple_expression
              (constructor_expression
                (qualified_type_identifier
                  (package_identifier)
                  (dot_identifier
                    (dot_operator)
                    (inner_dot_identifier)))
                (colon_colon)
                (uppercase_identifier)))))
        (statement_expression
          (expression
            (simple_expression
              (constructor_expression
                (qualified_type_identifier
                  (package_identifier)
                  (dot_identifier
                    (dot_operator)
                    (inner_dot_identifier)))
                (colon_colon)
                (uppercase_identifier)))))))))
